--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "slide",
     "verify"
   ],
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/Linx-x/slideVerify.git"
+  },
   "author": "walker",
   "license": "ISC"
 }
